--- a/játék projekt/palyak.html
+++ b/játék projekt/palyak.html
@@ -9,48 +9,133 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">CSGO</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="https://blog.counter-strike.net/"><img class="logo" src="CS1.png" alt="CSGO"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Főoldal <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="versenyek.html">Versenyek <span class="sr-only"></span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="palyak.html">Pályák</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
     <header class="container">
         <h1>Versengő pályák</h1>
     </header>
-    <main>
-      <ul>
-        <li>Mirage</li>
-        <li>inferno</li>
-        <li>overpass</li> 
-        <li>Vertigo</li>
-        <li>Nuke</li>
-        <li>Train</li>
-        <li>Dust 2</li>
-        <li>Cache</li>
-        <li>Agency</li>
-        <li>Office</li>
-        <li>Anubis</li>
-    </ul>
-        <p>Ezek közül a pályák közül néhányan nem bomba hatástalanítást kell végeznie a Terror elhárítóknak,
-        hanem a túszt kell kiszabadítani a Terroristák markai közül (Agency, Office).</p>
+    <main class="container">
+
+      <article class="row g-5">
+
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card" >
+        <img src="mirage.jpg" class="card-img-top" alt="Mirage">
+        <div class="card-body">
+          <p class="card-text">Mirage</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card" >
+         <img src="inferno.jpg" class="card-img-top" alt="Inferno">
+        <div class="card-body">
+          <p class="card-text">Inferno</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card" >
+        <img src="overpass.jpg" class="card-img-top" alt="Overpass">
+        <div class="card-body">
+          <p class="card-text">Overpass</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card" >
+        <img src="vertigo.jpg" class="card-img-top" alt="Verigo">
+        <div class="card-body">
+          <p class="card-text">Vertigo</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card" >
+        <img src="nuke.jpg" class="card-img-top" alt="Nuke">
+        <div class="card-body">
+          <p class="card-text">Nuke</p>
+        </div>
+        </div>
+    </div>
+
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card" >
+        <img src="train.png" class="card-img-top" alt="Train">
+        <div class="card-body">
+          <p class="card-text">Train</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card" >
+        <img src="dust2.jpg" class="card-img-top" alt="Dust 2">
+        <div class="card-body">
+          <p class="card-text">Dust 2</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card" >
+        <img src="cache.png" class="card-img-top" alt="Cache">
+        <div class="card-body">
+          <p class="card-text">Cache</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card" >
+        <img src="agency.jpg" class="card-img-top" alt="Agency">
+        <div class="card-body">
+          <p class="card-text">Agency</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card" >
+        <img src="office.png" class="card-img-top" alt="Office">
+        <div class="card-body">
+          <p class="card-text">Office</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card" >
+        <img src="anubis.jpeg" class="card-img-top" alt="Anubis">
+        <div class="card-body">
+          <p class="card-text">Anubis</p>
+        </div>
+      </div>
+    </div>
+
+  </article>
   
     </main>
     <footer>
