--- a/játék projekt/index.html
+++ b/játék projekt/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="https://blog.counter-strike.net/"><img class="logo" src="CS1.png" alt="CSGO"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -62,11 +62,11 @@
         </ul>
         <h2>Rangok</h2>
         <p>A játékban különféle rangok, ügyességi csoportok vannak.</p>
-        <img src="csgo-ranks.png" alt="Csgo rangok">
+        <img id="kep" src="csgo-ranks.png" alt="Csgo rangok">
         
     </main>
     <footer>
-
+&copy; Necek Dániel
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
