--- a/játék projekt/palyak.html
+++ b/játék projekt/palyak.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <a class="navbar-brand" href="https://blog.counter-strike.net/"><img class="logo" src="CS1.png" alt="CSGO"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -17,7 +18,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Főoldal <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Főoldal <span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="versenyek.html">Versenyek <span class="sr-only"></span></a>
@@ -30,11 +31,11 @@
   </nav>
 
     <header class="container">
-        <h1>Versengő pályák</h1>
+      <h1>Versengő pályák</h1> 
     </header>
-    <main class="container">
+  <main class="container">
 
-      <article class="row g-5">
+  <article class="row">
 
     <div class="col-12 col-md-6 col-lg-4">
       <div class="card" >
@@ -136,10 +137,10 @@
     </div>
 
   </article>
-  
+
     </main>
     <footer>
-
+&copy; Necek Dániel
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
