--- a/játék projekt/index.html
+++ b/játék projekt/index.html
@@ -62,7 +62,7 @@
         </ul>
         <h2>Rangok</h2>
         <p>A játékban különféle rangok, ügyességi csoportok vannak.</p>
-        <img id="kep" src="csgo-ranks.png" alt="Csgo rangok">
+        <img class="img fluid" id="kep" src="csgo-ranks.png" alt="Csgo rangok">
         
     </main>
     <footer>
